test/APINotes/obsoleted.code
// RUN: not %target-language-frontend -typecheck -verify -I %S/Inputs/custom-modules -F %S/Inputs/custom-frameworks -language-version 4 %s
// RUN: %target-language-frontend -typecheck -verify -I %S/Inputs/custom-modules -F %S/Inputs/custom-frameworks -language-version 4.2 %s
// RUN: %target-language-frontend -typecheck -verify -I %S/Inputs/custom-modules -F %S/Inputs/custom-frameworks -language-version 5 %s
// REQUIRES: objc_interop
import ObsoletedAPINotesTest

immutable _: FooID // expected-error{{'FooID' has been renamed to 'Foo_ID'}}
immutable _: Foo_ID

immutable _: BarContainerOld.Sub // expected-error{{'Sub' has been renamed to 'BarContainerCanonical.Sub'}}
immutable _: BarContainerCanonical.Sub
